...
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimaryDark"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/neighboursPicture"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher_foreground"
                app:layout_collapseMode="parallax" />
...

    <include
        android:id="@+id/neighbourName"
        layout="@layout/content_neighbour_profile" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="#FFFFFF"
        android:src="@drawable/ic_staroff"
        app:backgroundTint="#00FCF9F9"
...
