...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/neighboursName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:padding="12dp"
                android:text="@string/neighbour_name"
                android:textColor="@color/colorPrimaryText"
...
